@@ -1,3 +1,9 @@
+2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* bash/readrec.c: Include config.h.
+	* bash/Makefile.am (COMMON_CPPFLAGS): Include the builddir lib.
+	* src/rec-sex-tab.y: Use new form of %name-prefix.
+
 2018-03-17  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* m4/iconv.m4: Upgrade to gettext-0.19.8.1.
